// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OsToken approve when the sender has enough balance when the spender had an approved amount approves the requested amount and replaces the previous one 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 28855,
}
`;

exports[`OsToken approve when the sender has enough balance when there was no approved amount before approves the requested amount 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 45955,
}
`;

exports[`OsToken capacity owner can change 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 25068,
}
`;

exports[`OsToken controllers owner can change 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 48051,
}
`;

exports[`OsToken controllers owner can change 2`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 26139,
}
`;

exports[`OsToken fee percent owner can change 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 77683,
}
`;

exports[`OsToken keeper owner can change 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 30104,
}
`;

exports[`OsToken permit accepts owner signature 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 74554,
}
`;

exports[`OsToken transfer from when the spender has enough allowance when the token owner has enough balance transfers the requested amount 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 47366,
}
`;

exports[`OsToken transfer from when the spender has unlimited allowance does not decrease the spender allowance 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 53815,
}
`;

exports[`OsToken transfer when the sender transfers all balance transfers the requested amount 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 46569,
}
`;

exports[`OsToken transfer when the sender transfers zero tokens transfers the requested amount 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 28645,
}
`;

exports[`OsToken treasury owner can change 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 27690,
}
`;
